chore: stabilize tests and unify open-source verification workflow